--- a/src/index.css
+++ b/src/index.css
@@ -139,4 +139,10 @@ body {
     stroke: #000 !important;
     stroke-width: 1 !important;
   }
+  .dark {
+    .react-flow__edge-path {
+      stroke: #fff !important;
+      stroke-width: 1 !important;
+    }
+  }
 }
